		Minor configure script fixes (allow --without-unittests etc.).
		Removing the "NotRunning" run state.
		Adding dummy "step", "backward-step", and "continue-backwards"
		commands.
		Implementing support for re-executing commands without args
		("step" and "backward-step" so far).
20090724	The CPUComponent's .unassemble and .dump methods, and the
		RAMComponent's .dump method, are now also re-executable.
		CPU endianness is now serialized (as a bool, not enum).
		Beginning to work on cycle execution!
20090725	The step command now takes an argument (default is 1).
20090726	Removing the "global time" concept.
		Adding a helper for debug message indentation.
		Adding an "accuracy" variable to the RootComponent, which must
		be set to either "cycle" or "sloppy".
		Implementing pre-run-checks for M88K and MIPS cpus, for
		checking the r0 and zr registers, respectively.
20090727	When single-stepping, all state change (except for Custom
		StateVariables such as RAM contents) is now displayed.
		Porting the 88100 disassembly code from the old implementation
		to the new.
		Moving old main files into src/old_main/ (for clarity).
20090728	Including screenshots in auto generated machines.html.
		Finally managed to implement cycle-accurate continuous
		execution of multiple components at different speeds. :-)
		RAMComponent now clears ram on reset.
		Implementing a symbol registry for the new framework (which
		is per CPU).
20090729	Slowly beginning to reimplement dyntrans in C++: Beginning on
		the CPUComponent::DyntransExecute core loop, and some
		basic structures. MIPS and M88K cpus call DyntransExecute.
20090731	Continuing on the new dyntrans core. The first instruction (a
		M88K subu) can be executed on a dummy IC page.
		[Re]implementing some simple MIPS and M88K instructions.
		Arguments can now be passed during component creation, e.g.
		nr CPUs, CPU model, or ram amount for a template machine.
		Adding a 'raw' file loader, and a dummy SGI IP32 template.